fixed errors on spacing

--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -108,7 +108,7 @@ a:active {
 .footer {
     padding: var(--footer-padding);
 }
-navbar-menu {
+.navbar-menu {
     float: right;
 }
 .nav {
@@ -121,7 +121,7 @@ navbar-menu {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
-    letter-spacing: var(--nav-item-link-hover);
+    letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
 }
